lista no html atualizado

--- a/index.html
+++ b/index.html
@@ -134,21 +134,19 @@
       <h2>Estrutura do curso</h2>
 
       <div class="modules-grid">
-        <ol class="modules">
+        <ol class="modules single-list">
           <li>Inglês operacional essencial</li>
           <li>Comunicação em armazém e operações</li>
           <li>Estoque e inventário</li>
           <li>Transporte e logística diária</li>
           <li>Supply chain aplicado</li>
-        </ol>
-
-        <ol class="modules" start="6">
           <li>Operações internacionais</li>
           <li>Comunicação com fornecedores</li>
           <li>Reuniões profissionais</li>
           <li>E-mails no contexto real</li>
           <li>Resolução de problemas</li>
         </ol>
+
       </div>
     </div>
   </section>
