--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <p class="text">
         O Supply English foi estruturado para adultos que trabalham.
         O foco não é decorar regras, mas entender o contexto,
-        organizar ideias e usar o inglês de forma funcional
+        organizar idéias e usar o inglês de forma funcional
         no ambiente profissional.
       </p>
     </div>
