link de compra atualizado

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
 
         <a
-          href="https://go.hotmart.com/K103445396P"
+          href="https://go.hotmart.com/K103445396P?dp=1"
           class="cta-button"
           target="_blank"
           rel="noopener noreferrer"
@@ -184,7 +184,7 @@
       </p>
 
       <a
-        href="https://go.hotmart.com/K103445396P"
+        href="https://go.hotmart.com/K103445396P?dp=1"
         class="cta-button"
         target="_blank"
         rel="noopener noreferrer"
