--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <title>Supply English | Inglês para Logística</title>
   <meta name="description" content="Inglês prático para profissionais de logística, supply chain e operações. Comunicação real no trabalho, não inglês escolar.">
-  <link rel="stylesheet" href="src/css/style.css"/>
+
   <link rel="stylesheet" href="src/css/variable.css">
+  <link rel="stylesheet" href="src/css/style.css">
   <link rel="icon" href="src/imagem/globo.png" type="image/png" />
 </head>
+
 <body>
 
+  <!-- HERO -->
   <section class="hero">
     <div class="container hero-grid">
 
@@ -18,22 +22,15 @@
         <span class="tag">Turma fundadora · Pré-venda</span>
 
         <h1>
-          Inglês do trabalho real.<br>
-          Não o inglês de escola.
+          Supply English 1.0
         </h1>
 
         <p class="subtitle">
-          Um curso de inglês prático para profissionais de logística,
-          supply chain e operações que precisam se comunicar melhor
-          no dia a dia do trabalho.
+          <span>O treinamento completo</span> de inglês aplicado à logística e supply chain,
+          que vai te ensinar a se comunicar no trabalho real —
+          no Brasil e em operações internacionais,
+          mesmo que hoje você ainda se sinta inseguro com o inglês.
         </p>
-
-        <div class="price-box">
-          <p class="price-label">Condição da turma fundadora</p>
-          <p class="price-value">R$ 597,00</p>
-          <p class="price-note">Ou 12x de R$ 61,74</p>
-          <p class="price-note">Valor regular nas próximas turmas: R$ 997</p>
-        </div>
 
         <a
           href="https://go.hotmart.com/K103445396P?dp=1"
@@ -47,14 +44,16 @@
 
       <div class="hero-image">
         <img
-          src="src/imagem/first-photo (1).png"
+          src="src/imagem/first-photo.png"
           alt="Instrutor do Supply English"
-          class="hero-photo">
+          class="hero-photo"
+        >
       </div>
 
     </div>
   </section>
 
+  <!-- PARA QUEM É -->
   <section class="section">
     <div class="container">
       <h2>Para quem é o Supply English</h2>
@@ -64,23 +63,13 @@
         <li>Quem entende inglês, mas trava ao usar no trabalho</li>
         <li>Quem lida com e-mails, calls e alinhamentos em inglês</li>
       </ul>
-    </div>
+  
   </section>
 
-  <section class="section alt">
-    <div class="container">
-      <h2>Para quem não é</h2>
-      <ul class="list">
-        <li>Quem busca inglês para viagem ou conversação casual</li>
-        <li>Quem quer inglês escolar ou teórico</li>
-        <li>Quem não pretende aplicar no contexto profissional</li>
-      </ul>
-    </div>
-  </section>
-
+  <!-- BENEFÍCIOS -->
   <section class="section">
     <div class="container">
-      <h2>O que você vai desenvolver</h2>
+      <h2>Ao final do treinamento você será capaz de:</h2>
       <div class="grid">
         <p>✔ Organização de pensamento para falar inglês</p>
         <p>✔ Comunicação clara em e-mails e reuniões</p>
@@ -90,99 +79,191 @@
     </div>
   </section>
 
+  <!-- PRÉ-VENDA -->
   <section class="section alt">
     <div class="container">
-      <h2>Como o curso foi pensado</h2>
+      <h2>Como funciona a pré-venda:</h2>
+
       <p class="text">
-        O Supply English foi estruturado para adultos que trabalham.
-        O foco não é decorar regras, mas entender o contexto,
-        organizar idéias e usar o inglês de forma funcional
-        no ambiente profissional.
+        O Supply English 1.0 está sendo oferecido em formato de pré-venda
+      </p>
+
+      <p class="text">
+        Os módulos serão liberados de forma progressiva, com entregas quinzenais.
+      </p>
+
+      <p class="text">
+        Esse formato foi pensado para adultos que trabalham e precisam aplicar
+        o inglês no dia a dia.
       </p>
     </div>
   </section>
 
+  <!-- MÓDULOS EM CARDS -->
   <section class="section">
-    <div class="container">
-      <h2>Como funciona a pré-venda</h2>
+  <div class="container">
+    <h2 class="section-title">Explore o <span>que você vai aprender</span><br> com o Supply English 1.0:</h2>
 
-      <p class="text">
-        O Supply English 1.0 está sendo oferecido
-        em formato de pré-venda.
-      </p>
+    <div class="modules-grid">
 
-      <p class="text">
-        Os módulos serão liberados de forma progressiva,
-        com entregas quinzenais.
-      </p>
-
-      <p class="text">
-        Esse formato foi pensado para adultos que trabalham
-        e precisam de tempo para aplicar o conteúdo
-        no dia a dia profissional.
-      </p>
-
-      <p class="text">
-        Não é um curso para consumir rápido.
-        É um curso para aplicar.
-      </p>
-    </div>
-  </section>
-
-  <section class="section">
-    <div class="container">
-      <h2>Estrutura do curso</h2>
-
-      <div class="modules-grid">
-        <ol class="modules single-list">
-          <li>Inglês operacional essencial</li>
-          <li>Comunicação em armazém e operações</li>
-          <li>Estoque e inventário</li>
-          <li>Transporte e logística diária</li>
-          <li>Supply chain aplicado</li>
-          <li>Operações internacionais</li>
-          <li>Comunicação com fornecedores</li>
-          <li>Reuniões profissionais</li>
-          <li>E-mails no contexto real</li>
-          <li>Resolução de problemas</li>
-        </ol>
-
-      </div>
-    </div>
-  </section>
-
-  <section class="section alt">
-    <div class="container author-grid">
-
-      <div class="author-image">
-      <img
-          src="src/imagem/foto-perfil.png"
-          alt="Instrutor do Supply English"
-          class="hero-photo">
+      <!-- MÓDULO 01 -->
+      <div class="module-box">
+        <div class="module-icon">🧠</div>
+        <span class="module-number">MÓDULO 01</span>
+        <h3>Inglês Operacional Essencial</h3>
+        <button class="module-toggle">+ Ler mais</button>
+        <ul class="module-details">
+          <li>Inglês funcional do dia a dia</li>
+          <li>Verbos e estruturas mais usadas</li>
+          <li>Frases para responder e alinhar</li>
+          <li>Pronúncia para ser entendido</li>
+        </ul>
       </div>
 
-      <div>
-        <h2>Quem está por trás do Supply English</h2>
-        <p class="text">
-          Criado por um profissional de logística
-          que usa o inglês no trabalho real,
-          em ambientes internacionais,
-          e entende as dificuldades de comunicação
-          no dia a dia profissional.
-        </p>
+      <!-- MÓDULO 02 -->
+      <div class="module-box">
+        <div class="module-icon">🏭</div>
+        <span class="module-number">MÓDULO 02</span>
+        <h3>Comunicação em Armazém</h3>
+        <button class="module-toggle">+ Ler mais</button>
+        <ul class="module-details">
+          <li>Reportar erros e ocorrências</li>
+          <li>Explicar divergências</li>
+          <li>Pedir ajustes e confirmações</li>
+          <li>Alinhar processos simples</li>
+        </ul>
+      </div>
+
+      <!-- MÓDULO 03 -->
+      <div class="module-box">
+        <div class="module-icon">📦</div>
+        <span class="module-number">MÓDULO 03</span>
+        <h3>Estoque e Inventário</h3>
+        <button class="module-toggle">+ Ler mais</button>
+        <ul class="module-details">
+          <li>Falar sobre estoque e contagem</li>
+          <li>Explicar falta ou excesso</li>
+          <li>Alinhar correções</li>
+          <li>Atualizar status de inventário</li>
+        </ul>
+      </div>
+
+      <!-- MÓDULO 04 -->
+      <div class="module-box">
+        <div class="module-icon">🚚</div>
+        <span class="module-number">MÓDULO 04</span>
+        <h3>Transporte e Logística</h3>
+        <button class="module-toggle">+ Ler mais</button>
+        <ul class="module-details">
+          <li>Comunicar atrasos</li>
+          <li>Explicar causas</li>
+          <li>Atualizar clientes ou times</li>
+          <li>Reorganizar prazos</li>
+        </ul>
+      </div>
+
+      <!-- MÓDULO 05 -->
+      <div class="module-box">
+        <div class="module-icon">🌐</div>
+        <span class="module-number">MÓDULO 05</span>
+        <h3>Supply Chain Aplicado</h3>
+        <button class="module-toggle">+ Ler mais</button>
+        <ul class="module-details">
+          <li>Integração entre áreas</li>
+          <li>Onde o inglês aparece no fluxo</li>
+          <li>Comunicação entre funções</li>
+          <li>Evitar ruídos operacionais</li>
+        </ul>
+      </div>
+
+      <!-- MÓDULO 06 -->
+      <div class="module-box">
+        <div class="module-icon">📊</div>
+        <span class="module-number">MÓDULO 06</span>
+        <h3>Planejamento e Fornecedores</h3>
+        <button class="module-toggle">+ Ler mais</button>
+        <ul class="module-details">
+          <li>Falar sobre demanda</li>
+          <li>Justificar lead time</li>
+          <li>Negociar prazos</li>
+          <li>Explicar impactos operacionais</li>
+        </ul>
+      </div>
+
+      <!-- MÓDULO 07 -->
+      <div class="module-box">
+        <div class="module-icon">✈️</div>
+        <span class="module-number">MÓDULO 07</span>
+        <h3>Operações Internacionais</h3>
+        <button class="module-toggle">+ Ler mais</button>
+        <ul class="module-details">
+          <li>Comunicação com parceiros externos</li>
+          <li>Pedir informações corretamente</li>
+          <li>Esclarecer dúvidas</li>
+          <li>Evitar mal-entendidos culturais</li>
+        </ul>
+      </div>
+
+      <!-- MÓDULO 08 -->
+      <div class="module-box">
+        <div class="module-icon">🎧</div>
+        <span class="module-number">MÓDULO 08</span>
+        <h3>Calls e Reuniões</h3>
+        <button class="module-toggle">+ Ler mais</button>
+        <ul class="module-details">
+          <li>Entrar em calls com segurança</li>
+          <li>Confirmar entendimento</li>
+          <li>Fazer perguntas</li>
+          <li>Se posicionar com clareza</li>
+        </ul>
+      </div>
+
+      <!-- MÓDULO 09 -->
+      <div class="module-box">
+        <div class="module-icon">✉️</div>
+        <span class="module-number">MÓDULO 09</span>
+        <h3>E-mails Profissionais</h3>
+        <button class="module-toggle">+ Ler mais</button>
+        <ul class="module-details">
+          <li>Estrutura de e-mails</li>
+          <li>Follow-ups claros</li>
+          <li>Cobranças educadas</li>
+          <li>Atualizações objetivas</li>
+        </ul>
+      </div>
+
+      <!-- MÓDULO 10 -->
+      <div class="module-box">
+        <div class="module-icon">🛠️</div>
+        <span class="module-number">MÓDULO 10</span>
+        <h3>Resolução de Problemas</h3>
+        <button class="module-toggle">+ Ler mais</button>
+        <ul class="module-details">
+          <li>Explicar problemas com clareza</li>
+          <li>Assumir responsabilidade</li>
+          <li>Propor soluções</li>
+          <li>Alinhar próximos passos</li>
+        </ul>
       </div>
 
     </div>
-  </section>
+  </div>
+</section>
 
   <section class="cta-final">
     <div class="container">
       <h2>Entrar na primeira turma</h2>
-      <p>
-        A pré-venda está aberta para a turma fundadora,
+      <p class="price-value">
+        Pré-venda aberta para a turma fundadora,
         com valor diferenciado e entrega progressiva.
       </p>
-
+      <div class="price-box">
+          <p class="price-note">12x de R$ 61,74</p>
+          <p class="price-value">Ou</p>
+          <p class="price-value">R$ 597,00 à vista</p>      
+          <p class="price-value">Valor regular nas próximas turmas: R$ 997,00</p>
+      </div> 
+      
       <a
         href="https://go.hotmart.com/K103445396P?dp=1"
         class="cta-button"
@@ -194,6 +275,31 @@
     </div>
   </section>
 
+  <section class="section author">
+    <div class="container author-grid">
+
+      <div class="author-image">
+        <img
+          src="src/imagem/foto-perfil-removebg-preview.png"
+          alt="Instrutor do Supply English"
+        >
+      </div>
+
+      <div class="author-text">
+        <h2>Quem é <span>Gerson Knutz</span></h2>
+        <p class="text">
+          Profissional de logística com mais de 10 anos de experiência operacional e atuação em ambientes internacionais, utilizando o inglês no trabalho real, no dia a dia das operações.
+        </p>
+
+        <p class="text">
+          Defende que educação aplicada ao trabalho — quando conectada à realidade do mercado — é uma das principais ferramentas para crescimento profissional e mobilidade de carreira.
+        </p>
+      </div>
+
+    </div>
+  </section>
+
+  <!-- FOOTER -->
   <footer class="footer">
     <div class="container">
       <p>© 2026 Supply English</p>
@@ -203,8 +309,22 @@
     </div>
   </footer>
 
+  <!-- MODAL -->
+<div class="modal-overlay" id="moduleModal">
+  <div class="modal-box">
+    <button class="modal-close" id="closeModal">×</button>
+    <ul class="modal-content" id="modalContent"></ul>
+  </div>
+</div>
+
+
+  <!-- JS -->
+  <script src="src/modules.js" defer></script>
+
 </body>
 </html>
+
+
 
 
 
