--- a/index.html
+++ b/index.html
@@ -22,14 +22,17 @@
         <span class="tag">Turma fundadora · Pré-venda</span>
 
         <h1>
-          Supply English 1.0
+          Inglês aplicado ao trabalho real em Logística
         </h1>
 
         <p class="subtitle">
-          <span>O treinamento completo</span> de inglês aplicado à logística e supply chain,
-          que vai te ensinar a se comunicar no trabalho real —
-          no Brasil e em operações internacionais,
-          mesmo que hoje você ainda se sinta inseguro com o inglês.
+          <span>O treinamento completo</span> de Inglês aplicado à Logística & Supply Chain,
+          focado em e-mails, reuniões e decisões do dia a dia — no Brasil e em
+          operações internacionais.
+        </p>
+
+        <p class="support">
+          Mesmo que hoje você ainda se sinta inseguro com o inglês.
         </p>
 
         <a
@@ -38,7 +41,7 @@
           target="_blank"
           rel="noopener noreferrer"
         >
-          Entrar na primeira turma
+          Garantir vaga na turma fundadora
         </a>
       </div>
 
@@ -53,13 +56,41 @@
     </div>
   </section>
 
+  <section class="section author">
+    <div class="container author-grid">
+
+      <div class="author-image">
+        <img
+          src="src/imagem/foto-perfil-removebg-preview.png"
+          alt="Instrutor do Supply English"
+        >
+      </div>
+
+      <div class="author-text">
+        <h2>Quem é o criador do <br><span> Supply English 1.0</span></h2>
+        <p class="text">
+          Olá, eu sou Gerson Knutz.
+        </p>
+
+        <p class="text">
+          Sou profissional de logística com mais de 10 anos de experiência operacional, atuando em ambientes internacionais <span>na Irlanda</span>, utilizando o inglês no trabalho real, diariamente, dentro das operações.
+        </p>
+        
+        <p class="text">
+          Acredito que educação aplicada ao trabalho — quando conectada à realidade do mercado — é uma das ferramentas mais consistentes para crescimento profissional e mobilidade de carreira.
+        </p>
+      </div>
+
+    </div>
+  </section>
+
   <!-- PARA QUEM É -->
   <section class="section">
     <div class="container">
       <h2>Para quem é o Supply English</h2>
       <ul class="list">
         <li>Profissionais de logística e operações</li>
-        <li>Quem atua ou quer atuar em supply chain</li>
+        <li>Profissionais que atuam ou querem atuar em supply chain</li>
         <li>Quem entende inglês, mas trava ao usar no trabalho</li>
         <li>Quem lida com e-mails, calls e alinhamentos em inglês</li>
       </ul>
@@ -71,7 +102,7 @@
     <div class="container">
       <h2>Ao final do treinamento você será capaz de:</h2>
       <div class="grid">
-        <p>✔ Organização de pensamento para falar inglês</p>
+        <p>✔ Organizar o pensamento para se comunicar em inglês</p>
         <p>✔ Comunicação clara em e-mails e reuniões</p>
         <p>✔ Vocabulário real da logística</p>
         <p>✔ Segurança para se posicionar no trabalho</p>
@@ -275,30 +306,7 @@
     </div>
   </section>
 
-  <section class="section author">
-    <div class="container author-grid">
-
-      <div class="author-image">
-        <img
-          src="src/imagem/foto-perfil-removebg-preview.png"
-          alt="Instrutor do Supply English"
-        >
-      </div>
-
-      <div class="author-text">
-        <h2>Quem é <span>Gerson Knutz</span></h2>
-        <p class="text">
-          Profissional de logística com mais de 10 anos de experiência operacional e atuação em ambientes internacionais, utilizando o inglês no trabalho real, no dia a dia das operações.
-        </p>
-
-        <p class="text">
-          Defende que educação aplicada ao trabalho — quando conectada à realidade do mercado — é uma das principais ferramentas para crescimento profissional e mobilidade de carreira.
-        </p>
-      </div>
-
-    </div>
-  </section>
-
+  
   <!-- FOOTER -->
   <footer class="footer">
     <div class="container">
