google ads inserido

--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
   <link rel="stylesheet" href="src/css/variable.css">
   <link rel="stylesheet" href="src/css/style.css">
   <link rel="icon" href="src/imagem/globo.png" type="image/png" />
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17891066548"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-17891066548');
+</script>
+
 </head>
 
 <body>
