pagina atualizada para google ads

--- a/index.html
+++ b/index.html
@@ -11,137 +11,148 @@
   <link rel="stylesheet" href="src/css/style.css">
   <link rel="icon" href="src/imagem/globo.png" type="image/png" />
 
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17891066548"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'AW-17891066548');
-</script>
-
+  <!-- Google Ads -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17891066548"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'AW-17891066548');
+  </script>
 </head>
 
 <body>
 
-  <!-- HERO -->
-  <section class="hero">
-    <div class="container hero-grid">
+<!-- HERO -->
+<section class="hero">
+  <div class="container hero-grid">
 
-      <div class="hero-text">
-        <span class="tag">Turma fundadora · Pré-venda</span>
+    <div class="hero-text">
+      <span class="tag">Turma fundadora · Acesso antecipado com valor especial</span>
 
-        <h1>
-          Inglês aplicado ao trabalho real em Logística
-        </h1>
+      <h1>Inglês aplicado ao trabalho real em Logística</h1>
 
-        <p class="subtitle">
-          <span>O treinamento completo</span> de Inglês aplicado à Logística & Supply Chain,
-          focado em e-mails, reuniões e decisões do dia a dia — no Brasil e em
-          operações internacionais.
-        </p>
+      <p class="subtitle">
+        Um treinamento prático de Inglês aplicado à Logística & Supply Chain,
+        focado em e-mails, reuniões e decisões do dia a dia — no Brasil e em
+        operações internacionais.
+      </p>
 
-        <p class="support">
-          Mesmo que hoje você ainda se sinta inseguro com o inglês.
-        </p>
+      <p class="support">
+        Mesmo que hoje você ainda se sinta inseguro com o inglês.
+      </p>
 
-        <a
-          href="https://go.hotmart.com/K103445396P?dp=1"
-          class="cta-button"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          Garantir vaga na turma fundadora
-        </a>
-      </div>
-
-      <div class="hero-image">
-        <img
-          src="src/imagem/first-photo.png"
-          alt="Instrutor do Supply English"
-          class="hero-photo"
-        >
-      </div>
-
+      <a
+        href="https://go.hotmart.com/K103445396P?dp=1"
+        class="cta-button"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        Garantir vaga na turma fundadora
+      </a>
     </div>
-  </section>
 
-  <section class="section author">
-    <div class="container author-grid">
-
-      <div class="author-image">
-        <img
-          src="src/imagem/foto-perfil-removebg-preview.png"
-          alt="Instrutor do Supply English"
-        >
-      </div>
-
-      <div class="author-text">
-        <h2>Quem é o criador do <br><span> Supply English 1.0</span></h2>
-        <p class="text">
-          Olá, eu sou Gerson Knutz.
-        </p>
-
-        <p class="text">
-          Sou profissional de logística com mais de 10 anos de experiência operacional, atuando em ambientes internacionais <span>na Irlanda</span>, utilizando o inglês no trabalho real, diariamente, dentro das operações.
-        </p>
-        
-        <p class="text">
-          Acredito que educação aplicada ao trabalho — quando conectada à realidade do mercado — é uma das ferramentas mais consistentes para crescimento profissional e mobilidade de carreira.
-        </p>
-      </div>
-
+    <div class="hero-image">
+      <img src="src/imagem/first-photo.png" alt="Instrutor do Supply English" class="hero-photo">
     </div>
-  </section>
 
-  <!-- PARA QUEM É -->
-  <section class="section">
-    <div class="container">
-      <h2>Para quem é o Supply English</h2>
-      <ul class="list">
-        <li>Profissionais de logística e operações</li>
-        <li>Profissionais que atuam ou querem atuar em supply chain</li>
-        <li>Quem entende inglês, mas trava ao usar no trabalho</li>
-        <li>Quem lida com e-mails, calls e alinhamentos em inglês</li>
-      </ul>
-  
-  </section>
+  </div>
+</section>
 
-  <!-- BENEFÍCIOS -->
-  <section class="section">
-    <div class="container">
-      <h2>Ao final do treinamento você será capaz de:</h2>
-      <div class="grid">
-        <p>✔ Organizar o pensamento para se comunicar em inglês</p>
-        <p>✔ Comunicação clara em e-mails e reuniões</p>
-        <p>✔ Vocabulário real da logística</p>
-        <p>✔ Segurança para se posicionar no trabalho</p>
-      </div>
+<!-- O QUE RECEBE AGORA -->
+<section class="section highlight">
+  <div class="container">
+    <h2>O que você recebe ao entrar agora</h2>
+    <ul class="list">
+      <li>✔ Acesso imediato ao ambiente do curso</li>
+      <li>✔ Entrada no grupo oficial da turma fundadora</li>
+      <li>✔ Módulo 0 liberado com orientações e cronograma</li>
+      <li>✔ Entrega progressiva pensada para aplicação no trabalho</li>
+      <li>✔ Garantia de 15 dias — risco zero</li>
+    </ul>
+  </div>
+</section>
+
+<!-- AUTOR -->
+<section class="section author">
+  <div class="container author-grid">
+
+    <div class="author-image">
+      <img src="src/imagem/foto-perfil-removebg-preview.png" alt="Instrutor do Supply English">
     </div>
-  </section>
 
-  <!-- PRÉ-VENDA -->
-  <section class="section alt">
-    <div class="container">
-      <h2>Como funciona a pré-venda:</h2>
+    <div class="author-text">
+      <h2>Quem é o criador do <br><span>Supply English 1.0</span></h2>
+
+      <p class="text">Olá, eu sou Gerson Knutz.</p>
 
       <p class="text">
-        O Supply English 1.0 está sendo oferecido em formato de pré-venda
+        Sou profissional de logística com mais de 10 anos de experiência operacional,
+        atuando em ambientes internacionais <span>na Irlanda</span>, utilizando o inglês
+        no trabalho real diariamente.
       </p>
 
       <p class="text">
-        Os módulos serão liberados de forma progressiva, com entregas quinzenais.
-      </p>
-
-      <p class="text">
-        Esse formato foi pensado para adultos que trabalham e precisam aplicar
-        o inglês no dia a dia.
+        Acredito que educação aplicada ao trabalho — quando conectada à realidade do mercado —
+        é uma das ferramentas mais consistentes para crescimento profissional.
       </p>
     </div>
-  </section>
 
-  <!-- MÓDULOS EM CARDS -->
-  <section class="section">
+  </div>
+</section>
+
+<!-- PARA QUEM É -->
+<section class="section">
+  <div class="container">
+    <h2>Para quem é o Supply English</h2>
+    <ul class="list">
+      <li>Profissionais de logística e operações</li>
+      <li>Profissionais que atuam ou querem atuar em supply chain</li>
+      <li>Quem entende inglês, mas trava ao usar no trabalho</li>
+      <li>Quem lida com e-mails, calls e alinhamentos em inglês</li>
+    </ul>
+  </div>
+</section>
+
+<!-- BENEFÍCIOS -->
+<section class="section">
+  <div class="container">
+    <h2>Ao final do treinamento você será capaz de:</h2>
+    <div class="grid">
+      <p>✔ Organizar o pensamento para se comunicar em inglês</p>
+      <p>✔ Comunicação clara em e-mails e reuniões</p>
+      <p>✔ Vocabulário real da logística</p>
+      <p>✔ Segurança para se posicionar no trabalho</p>
+    </div>
+  </div>
+</section>
+
+<!-- PRÉ-VENDA -->
+<section class="section alt">
+  <div class="container">
+    <h2>Por que o Supply English é entregue de forma progressiva</h2>
+
+    <p class="text">
+      O Supply English 1.0 está sendo liberado para a turma fundadora em acesso antecipado,
+      com entrega progressiva dos módulos.
+    </p>
+
+    <p class="text">
+      Esse formato evita sobrecarga, permite aplicação imediata no trabalho
+      e respeita a rotina de quem já atua na área.
+    </p>
+
+    <p class="text">
+      Você evolui passo a passo, com clareza e segurança,
+      em vez de acumular conteúdo sem uso.
+    </p>
+  </div>
+</section>
+
+<!-- ================== MÓDULOS (INALTERADOS) ================== -->
+<!-- 🔽 A PARTIR DAQUI É EXATAMENTE O SEU BLOCO ORIGINAL 🔽 -->
+
+<section class="section">
   <div class="container">
     <h2 class="section-title">Explore o <span>que você vai aprender</span><br> com o Supply English 1.0:</h2>
 
@@ -291,43 +302,47 @@
   </div>
 </section>
 
-  <section class="cta-final">
-    <div class="container">
-      <h2>Entrar na primeira turma</h2>
-      <p class="price-value">
-        Pré-venda aberta para a turma fundadora,
-        com valor diferenciado e entrega progressiva.
-      </p>
-      <div class="price-box">
-          <p class="price-note">12x de R$ 61,74</p>
-          <p class="price-value">Ou</p>
-          <p class="price-value">R$ 597,00 à vista</p>      
-          <p class="price-value">Valor regular nas próximas turmas: R$ 997,00</p>
-      </div> 
-      
-      <a
-        href="https://go.hotmart.com/K103445396P?dp=1"
-        class="cta-button"
-        target="_blank"
-        rel="noopener noreferrer"
-      >
-        Garantir vaga
-      </a>
-    </div>
-  </section>
+<!-- CTA FINAL -->
+<section class="cta-final">
+  <div class="container">
+    <h2>Entrar na primeira turma</h2>
 
-  
-  <!-- FOOTER -->
-  <footer class="footer">
-    <div class="container">
-      <p>© 2026 Supply English</p>
-      <p class="footer-note">
-        Inglês para Logística, Supply Chain e Operações Internacionais
-      </p>
-    </div>
-  </footer>
+    <p class="price-value">
+      Turma fundadora, acesso antecipado com valor especial.
+    </p>
 
-  <!-- MODAL -->
+    <div class="price-box">
+      <p class="price-note">12x de R$ 61,74</p>
+      <p class="price-value">ou R$ 597,00 à vista</p>
+      <p class="price-value">Valor regular nas próximas turmas: R$ 997,00</p>
+    </div>
+
+    <p class="price-guarantee">
+    <strong>Garantia de 15 dias.</strong>
+     Se não fizer sentido, é só solicitar o reembolso.
+    </p>
+
+    <a
+      href="https://go.hotmart.com/K103445396P?dp=1"
+      class="cta-button"
+      target="_blank"
+      rel="noopener noreferrer"
+    >
+      Garantir vaga
+    </a>
+  </div>
+</section>
+
+<footer class="footer">
+  <div class="container">
+    <p>© 2026 Supply English</p>
+    <p class="footer-note">
+      Inglês para Logística, Supply Chain e Operações Internacionais
+    </p>
+  </div>
+</footer>
+
+<!-- MODAL (INALTERADO) -->
 <div class="modal-overlay" id="moduleModal">
   <div class="modal-box">
     <button class="modal-close" id="closeModal">×</button>
@@ -335,14 +350,8 @@
   </div>
 </div>
 
-
-  <!-- JS -->
-  <script src="src/modules.js" defer></script>
+<script src="src/modules.js" defer></script>
 
 </body>
 </html>
-
-
-
-
 
