adicionado id na section modulos e na garantia

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 <!-- ================== MÓDULOS (INALTERADOS) ================== -->
 <!-- 🔽 A PARTIR DAQUI É EXATAMENTE O SEU BLOCO ORIGINAL 🔽 -->
 
-<section class="section">
+<section id="modulos" class="section">
   <div class="container">
     <h2 class="section-title">Explore o <span>que você vai aprender</span><br> com o Supply English 1.0:</h2>
 
@@ -317,7 +317,7 @@
       <p class="price-value">Valor regular nas próximas turmas: R$ 997,00</p>
     </div>
 
-    <p class="price-guarantee">
+    <p id="garantia" class="price-guarantee">
     <strong>Garantia de 15 dias.</strong>
      Se não fizer sentido, é só solicitar o reembolso.
     </p>
