link hotmart alterado para whatsapp

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
         Mesmo que hoje você ainda se sinta inseguro com o inglês.
       </p>
 
-      <a
-        href="https://go.hotmart.com/K103445396P?dp=1"
-        class="cta-button"
-        target="_blank"
-        rel="noopener noreferrer"
-      >
-        Garantir vaga na turma fundadora
+     <a
+       href="https://wa.me/+?text=Olá!%20Vi%20o%20anúncio%20do%20Supply%20English%20e%20quero%20entrar%20na%20lista%20da%20pré-venda%20da%20turma%20fundadora."
+       class="cta-button"
+       target="_blank"
+       rel="noopener noreferrer"
+>
+        Receber informações da turma fundadora
       </a>
     </div>
 
@@ -311,24 +311,18 @@
       Turma fundadora, acesso antecipado com valor especial.
     </p>
 
-    <div class="price-box">
-      <p class="price-note">12x de R$ 61,74</p>
-      <p class="price-value">ou R$ 597,00 à vista</p>
-      <p class="price-value">Valor regular nas próximas turmas: R$ 997,00</p>
-    </div>
-
     <p id="garantia" class="price-guarantee">
     <strong>Garantia de 15 dias.</strong>
      Se não fizer sentido, é só solicitar o reembolso.
     </p>
 
     <a
-      href="https://go.hotmart.com/K103445396P?dp=1"
-      class="cta-button"
-      target="_blank"
-      rel="noopener noreferrer"
-    >
-      Garantir vaga
+       href="https://wa.me/+353832099994?text=Olá!%20Vi%20o%20anúncio%20do%20Supply%20English%20e%20quero%20entrar%20na%20lista%20da%20pré-venda%20da%20turma%20fundadora."
+       class="cta-button"
+       target="_blank"
+       rel="noopener noreferrer"
+      >
+      Entrar agora na lista da turma fundadora
     </a>
   </div>
 </section>
