--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </p>
 
      <a
-       href="https://wa.me/+?text=Olá!%20Vi%20o%20anúncio%20do%20Supply%20English%20e%20quero%20entrar%20na%20lista%20da%20pré-venda%20da%20turma%20fundadora."
+       href="https://wa.me/353832099994?text=Olá!%20Vi%20o%20anúncio%20do%20Supply%20English%20e%20quero%20entrar%20na%20lista%20da%20pré-venda%20da%20turma%20fundadora."
        class="cta-button"
        target="_blank"
        rel="noopener noreferrer"
@@ -317,7 +317,7 @@
     </p>
 
     <a
-       href="https://wa.me/+353832099994?text=Olá!%20Vi%20o%20anúncio%20do%20Supply%20English%20e%20quero%20entrar%20na%20lista%20da%20pré-venda%20da%20turma%20fundadora."
+       href="https://wa.me/353832099994?text=Olá!%20Vi%20o%20anúncio%20do%20Supply%20English%20e%20quero%20entrar%20na%20lista%20da%20pré-venda%20da%20turma%20fundadora."
        class="cta-button"
        target="_blank"
        rel="noopener noreferrer"
