--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
        target="_blank"
        rel="noopener noreferrer"
       >
-      Entrar agora na lista da turma fundadora
+      Entrar na lista da turma fundadora
     </a>
   </div>
 </section>
